learn-kuberentes/api-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: synergychat-api
  ports:
    - name: web-port
      protocol: TCP
      nodePort: 30080
      port: 80  
      targetPort: 8080
  type: NodePort
