learn-kuberentes/crawler-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: crawler
spec:
  selector:
    app: synergychat-crawler
  ports:
    - name: web-port
      protocol: TCP
      port: 8080  
  type: ClusterIP
